expand the table with hidden by default columns

--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -90,21 +90,26 @@
                 <th data-field="rawMaterial" data-filter-control="input">Raw material</th>
                 <th data-field="name" data-filter-control="input">Name</th>
                 <th data-field="formula" data-filter-control="input">Formula</th>
+                <th data-field="spaceGroup" data-filter-control="input" data-visible="false">Space Groups</th>
+                <th data-field="crystalStructure" data-filter-control="input" data-visible="false">Crystal structure</th>
+                <th data-field="unitCellType" data-filter-control="input" data-visible="false">Unit-cell type</th>
                 <th data-field="doping" data-filter-control="input">Doping</th>
                 <th data-field="shape" data-filter-control="input">Shape</th>
+                <th data-field="variables" data-filter-control="input" data-visible="false">Variables</th>
                 <th data-field="classification" data-filter-control="input">Class</th>
-                {#                <th data-field="fabrication" data-filter-control="input" >Fabrication</th>#}
-                {#                <th data-field="substrate" data-filter-control="input" >Substrate</th>#}
+                <th data-field="fabrication" data-filter-control="input" data-visible="false">Fabrication</th>
+                <th data-field="substrate" data-filter-control="input" data-visible="false">Substrate</th>
                 <th data-field="criticalTemperature" data-filter-control="input">Tc</th>
                 <th data-field="appliedPressure" data-filter-control="input">Applied Pressure</th>
-                {#                <th data-field="linkType" data-filter-control="input" >Raw entry</th>#}
+                <th data-field="criticalTemperatureMeasurementMethod" data-filter-control="input">Tc measurement method</th>
+                <th data-field="linkType" data-filter-control="input" data-visible="false">Link type</th>
                 <th data-field="section" data-filter-control="input">Section</th>
                 <th data-field="subsection" data-filter-control="input">Sub section</th>
-                {#                <th data-field="sentence" data-filter-control="input" >Sentence</th>#}
-                {#                <th data-field="path" data-filter-control="input" >Raw entry</th>#}
-                {#                <th data-field="filename" data-filter-control="input" >Raw entry</th>#}
-                {#                <th data-field="hash" data-filter-control="input" >Raw entry</th>#}
-                {#                <th data-fiel="timestamp" data-filter-control="input" >Raw entry</th>#}
+                <th data-field="sentence" data-filter-control="input" data-visible="false">Sentence</th>
+                <th data-field="path" data-filter-control="input" data-visible="false">Path</th>
+                <th data-field="filename" data-filter-control="input" data-visible="false">Filename</th>
+                <th data-field="hash" data-filter-control="input" data-visible="false">Hash</th>
+                <th data-fiel="timestamp" data-filter-control="input" data-visible="false">Timestamp</th>
                 <th data-field="hash" data-filter-control="input" data-formatter="linkFormatter">View Document</th>
                 <th data-field="doi" data-filter-control="input">DOI</th>
                 <th data-field="authors" data-filter-control="input">Authors</th>
