fix class original column name

--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -96,7 +96,7 @@
                 <th data-field="doping" data-filter-control="input">Doping</th>
                 <th data-field="shape" data-filter-control="input">Shape</th>
                 <th data-field="variables" data-filter-control="input" data-visible="false">Variables</th>
-                <th data-field="classification" data-filter-control="input">Class</th>
+                <th data-field="materialClass" data-filter-control="input">Class</th>
                 <th data-field="fabrication" data-filter-control="input" data-visible="false">Fabrication</th>
                 <th data-field="substrate" data-filter-control="input" data-visible="false">Substrate</th>
                 <th data-field="criticalTemperature" data-filter-control="input">Tc</th>
