--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -48,7 +48,7 @@
         <div class="page-header">
             <div class="row">
                 <div class="col-11">
-                    <h1>GROBID Superconductors Text and Data Mining - document viewer</h1>
+                    <h1>SuperCon<sup>2</sup>: Document viewer</h1>
                 </div>
                 <div class="col-1">
                     <!--                    <a href="http://www.github.com/lfoppiano/grobid-superconductors"><img-->
