--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -57,25 +57,25 @@
                 <strong>Work in progress.</strong>
 
                 <p>
-                    This database is an experimental application to extract automatically superconductors material and
-                    their
-                    properties from superconductors-related scientific literature.
+                    This database is an application to extract automatically superconductors material and
+                    their properties from superconductors-related scientific literature.
                 </p>
-                <p>The interface can be used to view the extracted properties (no modification for the moment).</p>
+                <p>The interface can be used to view the extracted properties.</p>
                 <p>
                     <strong>References</strong>
-                <ul>
-                    <li>Luca Foppiano, Thaer Dieb, Akira Suzuki, Masashi Ishii. Proposal for Automatic Extraction
-                        Framework of Superconductors Related Information from Scientific Literature.
-                        電子情報通信学会サービスコンピューティング研究会　2019年度第一回研究会、 第４３回MaDIS研究交流会合同研究会, May 2019, Tsukuba, Japan.
-                        ⟨hal-02870896⟩
-                    </li>
-                    <li>Luca Foppiano, Sae Dieb, Akira Suzuki, Pedro Baptista de Castro, Suguru Iwasaki, et al..
-                        SuperMat: Construction of a linked annotated dataset from superconductors-related publications.
-                        2021. ⟨hal-03101177v2⟩
-                    </li>
-                </ul>
-
+                    <ul>
+                        <li>Luca Foppiano, Sae Dieb, Akira Suzuki, Pedro Baptista de Castro, Suguru Iwasaki, Azusa Uzuki, 
+                            Miren Garbine Esparza Echevarria, Yan Meng, Kensei Terashima, Laurent Romary, Yoshihiko Takano & 
+                            Masashi Ishii (2021) SuperMat: construction of a linked annotated dataset from 
+                            superconductors-related publications, Science and Technology of Advanced Materials: 
+                            Methods, 1:1, 34-44, DOI: 10.1080/27660400.2021.1918396 
+                        </li>
+                        <li>Luca Foppiano, Thaer Dieb, Akira Suzuki, Masashi Ishii. Proposal for Automatic Extraction
+                            Framework of Superconductors Related Information from Scientific Literature.
+                            電子情報通信学会サービスコンピューティング研究会　2019年度第一回研究会、 第４３回MaDIS研究交流会合同研究会, May 2019, Tsukuba, Japan.
+                            ⟨hal-02870896⟩
+                        </li>
+                    </ul>
                 </p>
             </div>
             <div class="footer row border-top" style="width: 100%">
