--- a/supercon2/templates/v2/automatic_database.html
+++ b/supercon2/templates/v2/automatic_database.html
@@ -12,7 +12,8 @@
 <div class="container-fluid">
 
     <div id="app">
-      {{ hoge }}
+      <p v-if="hoge.length > 0">hoge</p>
+
     </div>
 
     <footer>
