--- a/supercon2/templates/v2/automatic_database.html
+++ b/supercon2/templates/v2/automatic_database.html
@@ -13,15 +13,30 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-
-    <div id="app">
-      <v-data-table :headers="headers" :items="items" :items-per-page="5" :dense="true" loading-text="loading ..."
-        class="elevation-1"></v-data-table>
-    </div>
-    <footer>
-      <p><span style="color:#848484;">contributors - 2021</span></p>
-    </footer>
+  <div id="app">
+    <v-container fluid>
+      <h2>Supercon2 "automatically extracted database" tabular view</h2>
+      <v-data-table :headers="headers" :items="items" :items-per-page="20" :dense="true" loading-text="loading ..."
+        :multi-sort="true" class="elevation-1">
+        <template v-slot:body.prepend>
+          <tr>
+            <td>
+              <v-text-field v-model="name" type="text" label="Dessert name"></v-text-field>
+            </td>
+            <td>
+              <v-text-field v-model="calories" type="number" label="Less than"></v-text-field>
+            </td>
+            <td>
+              <v-text-field v-model="fat" type="number" label="Less than"></v-text-field>
+            </td>
+            <td>
+              <v-text-field v-model="carbs" type="number" label="Exact number"></v-text-field>
+            </td>
+          </tr>
+        </template>
+      </v-data-table>
+    </v-container>
+    <p><span style="color:#848484;">contributors - 2021</span></p>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
@@ -33,53 +48,53 @@
       data() {
         return {
           headers: [
-            { text: 'appliedPressure', value: 'appliedPressure' },
-            { text: 'appliedPressureId', value: 'appliedPressureId' },
-            { text: 'authors', value: 'authors' },
-            { text: 'criticalTemperature', value: 'criticalTemperature' },
-            { text: 'criticalTemperatureId', value: 'criticalTemperatureId' },
-            { text: 'criticalTemperatureMeasurementMethod', value: 'criticalTemperatureMeasurementMethod' },
-            { text: 'criticalTemperatureMeasurementMethodId', value: 'criticalTemperatureMeasurementMethodId' },
-            { text: 'crystalStructure', value: 'crystalStructure' },
-            { text: 'crystalStructureId', value: 'crystalStructureId' },
-            { text: 'doc_url', value: 'doc_url' },
-            { text: 'doi', value: 'doi' },
-            { text: 'doping', value: 'doping' },
-            { text: 'fabrication', value: 'fabrication' },
-            { text: 'filename', value: 'filename' },
-            { text: 'formula', value: 'formula' },
-            { text: 'hash', value: 'hash' },
-            { text: 'id', value: 'id' },
-            { text: 'journal', value: 'journal' },
-            { text: 'linkType', value: 'linkType' },
-            { text: 'materialClass', value: 'materialClass' },
-            { text: 'materialId', value: 'materialId' },
-            { text: 'name', value: 'name' },
-            { text: 'path', value: 'path' },
-            { text: 'publisher', value: 'publisher' },
-            { text: 'rawMaterial', value: 'rawMaterial' },
-            { text: 'section', value: 'section' },
-            { text: 'sentence', value: 'sentence' },
-            { text: 'shape', value: 'shape' },
-            { text: 'spaceGroup', value: 'spaceGroup' },
-            { text: 'spaceGroupId', value: 'spaceGroupId' },
-            { text: 'status', value: 'status' },
-            { text: 'subsection', value: 'subsection' },
-            { text: 'substrate', value: 'substrate' },
-            { text: 'timestamp', value: 'timestamp' },
-            { text: 'title', value: 'title' },
-            { text: 'type', value: 'type' },
-            { text: 'unitCellType', value: 'unitCellType' },
-            { text: 'unitCellTypeId', value: 'unitCellTypeId' },
-            { text: 'variables', value: 'variables' },
-            { text: 'year', value: 'year' }
+            { text: 'Applied Pressure', value: 'appliedPressure' },
+            { text: 'Applied Pressure ID', value: 'appliedPressureId' },
+            { text: 'Authors', value: 'authors', width: 300 },
+            { text: 'Critical Temperature', value: 'criticalTemperature' },
+            { text: 'Critical TemperatureId', value: 'criticalTemperatureId' },
+            { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod' },
+            { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId' },
+            { text: 'Crystal Structure', value: 'crystalStructure' },
+            { text: 'Crystal Structure ID', value: 'crystalStructureId' },
+            { text: 'Doc URL', value: 'doc_url' },
+            { text: 'DOI', value: 'doi' },
+            { text: 'Doping', value: 'doping' },
+            { text: 'Fabrication', value: 'fabrication' },
+            { text: 'Filename', value: 'filename' },
+            { text: 'Formula', value: 'formula' },
+            { text: 'Hash', value: 'hash' },
+            { text: 'ID', value: 'id' },
+            { text: 'Journal', value: 'journal' },
+            { text: 'Link Type', value: 'linkType' },
+            { text: 'Material Class', value: 'materialClass' },
+            { text: 'Material ID', value: 'materialId' },
+            { text: 'Name', value: 'name' },
+            { text: 'Path', value: 'path' },
+            { text: 'Publisher', value: 'publisher' },
+            { text: 'Raw Material', value: 'rawMaterial' },
+            { text: 'Section', value: 'section' },
+            { text: 'Sentence', value: 'sentence', width: 500 },
+            { text: 'Shape', value: 'shape' },
+            { text: 'Space Group', value: 'spaceGroup' },
+            { text: 'Space Group ID', value: 'spaceGroupId' },
+            { text: 'Status', value: 'status' },
+            { text: 'Subsection', value: 'subsection' },
+            { text: 'Substrate', value: 'substrate' },
+            { text: 'Timestamp', value: 'timestamp' },
+            { text: 'Title', value: 'title', width: 500 },
+            { text: 'Type', value: 'type' },
+            { text: 'Unit Cell Type', value: 'unitCellType' },
+            { text: 'Unit Cell Type ID', value: 'unitCellTypeId' },
+            { text: 'Variables', value: 'variables' },
+            { text: 'Year', value: 'year' }
           ],
           items: []
         }
       },
       mounted() {
         console.log("mounted")
-        axios.get("/tabular/automatic").then((data) => {
+        axios.get("/records/automatic").then((data) => {
           console.log({ data })
           this.items = data.data
         })
