Sort by the same order as existing pages

--- a/supercon2/templates/v2/automatic_database.html
+++ b/supercon2/templates/v2/automatic_database.html
@@ -48,46 +48,47 @@
       data() {
         return {
           headers: [
-            { text: 'Applied Pressure', value: 'appliedPressure' },
-            { text: 'Applied Pressure ID', value: 'appliedPressureId' },
-            { text: 'Authors', value: 'authors', width: 300 },
-            { text: 'Critical Temperature', value: 'criticalTemperature' },
-            { text: 'Critical TemperatureId', value: 'criticalTemperatureId' },
-            { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod' },
-            { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId' },
-            { text: 'Crystal Structure', value: 'crystalStructure' },
-            { text: 'Crystal Structure ID', value: 'crystalStructureId' },
-            { text: 'Doc URL', value: 'doc_url' },
-            { text: 'DOI', value: 'doi' },
-            { text: 'Doping', value: 'doping' },
-            { text: 'Fabrication', value: 'fabrication' },
-            { text: 'Filename', value: 'filename' },
-            { text: 'Formula', value: 'formula' },
-            { text: 'Hash', value: 'hash' },
-            { text: 'ID', value: 'id' },
-            { text: 'Journal', value: 'journal' },
-            { text: 'Link Type', value: 'linkType' },
-            { text: 'Material Class', value: 'materialClass' },
-            { text: 'Material ID', value: 'materialId' },
-            { text: 'Name', value: 'name' },
-            { text: 'Path', value: 'path' },
-            { text: 'Publisher', value: 'publisher' },
             { text: 'Raw Material', value: 'rawMaterial' },
-            { text: 'Section', value: 'section' },
-            { text: 'Sentence', value: 'sentence', width: 500 },
+            { text: 'Name', value: 'name' },
+            { text: 'Formula', value: 'formula' },
+            // { text: 'Space Group', value: 'spaceGroup' },
+            // { text: 'Space Group ID', value: 'spaceGroupId' },
+            // { text: 'Crystal Structure', value: 'crystalStructure' },
+            // { text: 'Crystal Structure ID', value: 'crystalStructureId' },
+            // { text: 'Unit Cell Type', value: 'unitCellType' },
+            // { text: 'Unit Cell Type ID', value: 'unitCellTypeId' },
+            { text: 'Doping', value: 'doping' },
             { text: 'Shape', value: 'shape' },
-            { text: 'Space Group', value: 'spaceGroup' },
-            { text: 'Space Group ID', value: 'spaceGroupId' },
-            { text: 'Status', value: 'status' },
+            // { text: 'Variables', value: 'variables' },
+            { text: 'Material Class', value: 'materialClass' },
+            // { text: 'Fabrication', value: 'fabrication' },
+            // { text: 'Substrate', value: 'substrate' },
+            { text: 'Critical Temperature', value: 'criticalTemperature' },
+            // { text: 'Critical TemperatureId', value: 'criticalTemperatureId' },
+            { text: 'Applied Pressure', value: 'appliedPressure' },
+            // { text: 'Applied Pressure ID', value: 'appliedPressureId' },
+            // { text: 'Link Type', value: 'linkType' },
+            { text: 'Section', value: 'section' },
             { text: 'Subsection', value: 'subsection' },
-            { text: 'Substrate', value: 'substrate' },
-            { text: 'Timestamp', value: 'timestamp' },
+            // { text: 'Path', value: 'path' },
+            // { text: 'Filename', value: 'filename' },
+            // { text: 'Hash', value: 'hash' },
+            // { text: 'Timestamp', value: 'timestamp' },
+            { text: 'DOI', value: 'doi' },
+            { text: 'Authors', value: 'authors', width: 300 },
             { text: 'Title', value: 'title', width: 500 },
+            { text: 'Publisher', value: 'publisher' },
+            { text: 'Journal', value: 'journal' },
             { text: 'Type', value: 'type' },
-            { text: 'Unit Cell Type', value: 'unitCellType' },
-            { text: 'Unit Cell Type ID', value: 'unitCellTypeId' },
-            { text: 'Variables', value: 'variables' },
-            { text: 'Year', value: 'year' }
+            { text: 'Actions', value: 'actions', sortable: false },
+            // { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod' },
+            // { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId' },
+            // { text: 'Doc URL', value: 'doc_url' },
+            // { text: 'ID', value: 'id' },
+            // { text: 'Material ID', value: 'materialId' },
+            // { text: 'Sentence', value: 'sentence', width: 500 },
+            // { text: 'Status', value: 'status' },
+            // { text: 'Year', value: 'year' },
           ],
           items: []
         }
