match the existing screen items

--- a/supercon2/templates/v2/automatic_database.html
+++ b/supercon2/templates/v2/automatic_database.html
@@ -73,11 +73,11 @@
             { text: 'Name', value: 'name', hidden: false },
             { text: 'Formula', value: 'formula', hidden: false },
             { text: 'Space Group', value: 'spaceGroup', hidden: true },
-            { text: 'Space Group ID', value: 'spaceGroupId', hidden: true },
+            // { text: 'Space Group ID', value: 'spaceGroupId', hidden: true },
             { text: 'Crystal Structure', value: 'crystalStructure', hidden: true },
-            { text: 'Crystal Structure ID', value: 'crystalStructureId', hidden: true },
+            // { text: 'Crystal Structure ID', value: 'crystalStructureId', hidden: true },
             { text: 'Unit Cell Type', value: 'unitCellType', hidden: true },
-            { text: 'Unit Cell Type ID', value: 'unitCellTypeId', hidden: true },
+            // { text: 'Unit Cell Type ID', value: 'unitCellTypeId', hidden: true },
             { text: 'Doping', value: 'doping', hidden: false },
             { text: 'Shape', value: 'shape', hidden: false },
             { text: 'Variables', value: 'variables', hidden: true },
@@ -85,9 +85,11 @@
             { text: 'Fabrication', value: 'fabrication', hidden: true },
             { text: 'Substrate', value: 'substrate', hidden: true },
             { text: 'Critical Temperature', value: 'criticalTemperature', hidden: false },
-            { text: 'Critical TemperatureId', value: 'criticalTemperatureId', hidden: true },
+            // { text: 'Critical TemperatureId', value: 'criticalTemperatureId', hidden: true },
             { text: 'Applied Pressure', value: 'appliedPressure', hidden: false },
-            { text: 'Applied Pressure ID', value: 'appliedPressureId', hidden: true },
+            // { text: 'Applied Pressure ID', value: 'appliedPressureId', hidden: true },
+            { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true },
+            // { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId', hidden: true },
             { text: 'Link Type', value: 'linkType', hidden: true },
             { text: 'Section', value: 'section', hidden: false },
             { text: 'Subsection', value: 'subsection', hidden: false },
@@ -100,16 +102,14 @@
             { text: 'Title', value: 'title', width: 500, hidden: false },
             { text: 'Publisher', value: 'publisher', hidden: false },
             { text: 'Journal', value: 'journal', hidden: false },
+            { text: 'Year', value: 'year', hidden: false },
             { text: 'Type', value: 'type', hidden: false },
             { text: 'Actions', value: 'actions', sortable: false, hidden: false },
-            { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true },
-            { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId', hidden: true },
-            { text: 'Doc URL', value: 'doc_url', hidden: true },
-            { text: 'ID', value: 'id', hidden: true },
-            { text: 'Material ID', value: 'materialId', hidden: true },
-            { text: 'Sentence', value: 'sentence', width: 500, hidden: true },
-            { text: 'Status', value: 'status', hidden: true },
-            { text: 'Year', value: 'year', hidden: true },
+            // { text: 'Doc URL', value: 'doc_url', hidden: true },
+            // { text: 'ID', value: 'id', hidden: true },
+            // { text: 'Material ID', value: 'materialId', hidden: true },
+            // { text: 'Sentence', value: 'sentence', width: 500, hidden: true },
+            // { text: 'Status', value: 'status', hidden: true },
           ],
           items: []
         }
