--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -1,143 +1,139 @@
 <!DOCTYPE XHTML>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
     <title>Supercon 2 list of processed articles</title>
-    <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico') }}/>
-    <link rel="shortcut icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico') }}/>
-
-    <!-- JQuery -->
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/jquery/jquery-3.4.1.js') }}></script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/jquery/jquery.form.3.51.js') }}></script>
-
-    <!-- Font awesome -->
-    <link rel="stylesheet" href={{ url_for('static', filename='resources/libs/font-awesome/font-awesome.css') }}>
-
-    <!-- Bootstrap -->
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/bootstrap-4.5.0/js/bootstrap.bundle.min.js') }}></script>
-    <link rel="stylesheet"
-          href={{ url_for('static', filename='resources/libs/bootstrap-4.5.0/css/bootstrap.min.css') }} media="screen"/>
-    <link rel="stylesheet" href={{ url_for('static', filename='resources/libs/font-awesome/font-awesome.min.css') }}>
-    <link href={{ url_for('static', filename='resources/libs/bootstrap-table/bootstrap-table.min.css') }} rel="stylesheet">
-    <script src={{ url_for('static', filename='resources/libs/bootstrap-table/bootstrap-table.min.js') }}></script>
-    <script src={{ url_for('static', filename='resources/libs/bootstrap-table/locale/bootstrap-table-en-US.min.js') }}></script>
-    <link rel="stylesheet" type="text/css"
-          href={{ url_for('static', filename='resources/libs/bootstrap-table/extensions/filter-control/bootstrap-table-filter-control.css') }}>
-    <script src={{ url_for('static', filename='resources/libs/bootstrap-table/extensions/filter-control/bootstrap-table-filter-control.js') }}></script>
-
-    <script src={{ url_for('static', filename='resources/libs/table-export/tableExport.js') }}></script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/FileSaver/FileSaver.min.js') }}></script>
-    <script src={{ url_for('static', filename='resources/libs/bootstrap-table/extensions/export/bootstrap-table-export.js') }}></script>
-
-    <!-- X-editable -->
-    {#    <link href="/static/resources/libs/bootstrap-editable/css/bootstrap-editable.css" rel="stylesheet">#}
-    {#    <script src="/static/resources/libs/bootstrap-editable/js/bootstrap-editable.js"></script>#}
-
-    <!-- PDF.js stuff -->
-    <link type="text/css"
-          href={{ url_for('static', filename='resources/libs/pdf.js/web/text_layer_builder.css') }} rel="stylesheet"/>
-    <link type="text/css"
-          href={{ url_for('static', filename='resources/libs/pdf.js/web/annotation_layer_builder.css') }} rel="stylesheet"/>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/pdf.js/web/text_layer_builder.js') }}></script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/pdf.js/web/pdf_link_service.js') }}></script>
-    <script type="text/javascript"
-            src={{ url_for('static', filename='resources/libs/pdf.js/web/annotation_layer_builder.js') }}></script>
-    <script type="text/javascript" src={{ url_for('static', filename='resources/libs/pdf.js/build_/pdf.js') }}></script>
-
-    <!-- Custom stylesheets -->
-    <link rel="stylesheet" href={{ url_for('static', filename='resources/css/style.css') }}/>
-    <script src={{ url_for('static', filename='grobid/javascript.js') }}></script>
-
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
+    <link rel="shortcut icon" type="image/x-icon" href={{ url_for('static', filename='resources/img/favicon.ico' ) }} />
 </head>
 
 <body>
-<div class="container-fluid">
-
-    <div class="content">
-
-        <div class="page-header">
-            <h1><span style="color:#333;">Supercon<sup>2</sup> "automatically extracted database" tabular view</span>
-            </h1>
-        </div>
-        <div id="divRestI">
-            <a href={{ url_for('supercon.index') }}>Back</a>
-        </div>
-        {#        <button id="exportCsv" type="button" class="btn btn-primary">CSV Export</button>#}
-        <table id="mainTable" class="small"
-               data-url="{{ url_for('supercon.get_tabular_from_path_by_type', type='automatic') }}"
-               data-show-columns="true"
-               data-show-columns-toggle-all="true"
-               data-filter-control="true"
-               data-toggle="#mainTable"
-               data-toolbar="#toolbar"
-               data-pagination="true"
-               data-sortable="true"
-               data-show-search-clear-button="true"
-               data-page-size="25"
-               data-show-export="true"
-               data-export-data-type="all"
-               data-export-options='{
-                    "fileName": "supercon"
-               }'>
-            <thead>
-            <tr>
-                <th data-field="rawMaterial" data-filter-control="input">Raw material</th>
-                <th data-field="name" data-filter-control="input">Name</th>
-                <th data-field="formula" data-filter-control="input">Formula</th>
-                <th data-field="spaceGroup" data-filter-control="input" data-visible="false">Space Groups</th>
-                <th data-field="crystalStructure" data-filter-control="input" data-visible="false">Crystal structure</th>
-                <th data-field="unitCellType" data-filter-control="input" data-visible="false">Unit-cell type</th>
-                <th data-field="doping" data-filter-control="input">Doping</th>
-                <th data-field="shape" data-filter-control="input">Shape</th>
-                <th data-field="variables" data-filter-control="input" data-visible="false">Variables</th>
-                <th data-field="materialClass" data-filter-control="input">Class</th>
-                <th data-field="fabrication" data-filter-control="input" data-visible="false">Fabrication</th>
-                <th data-field="substrate" data-filter-control="input" data-visible="false">Substrate</th>
-                <th data-field="criticalTemperature" data-filter-control="input">Tc</th>
-                <th data-field="appliedPressure" data-filter-control="input">Applied Pressure</th>
-                <th data-field="criticalTemperatureMeasurementMethod" data-filter-control="input">Tc measurement method</th>
-                <th data-field="linkType" data-filter-control="input" data-visible="false">Link type</th>
-                <th data-field="section" data-filter-control="input">Section</th>
-                <th data-field="subsection" data-filter-control="input">Sub section</th>
-                <th data-field="sentence" data-filter-control="input" data-visible="false">Sentence</th>
-                <th data-field="path" data-filter-control="input" data-visible="false">Path</th>
-                <th data-field="filename" data-filter-control="input" data-visible="false">Filename</th>
-                <th data-field="hash" data-filter-control="input" data-visible="false">Hash</th>
-                <th data-fiel="timestamp" data-filter-control="input" data-visible="false">Timestamp</th>
-                <th data-field="hash" data-filter-control="input" data-formatter="linkFormatter">View Document</th>
-                <th data-field="doi" data-filter-control="input">DOI</th>
-                <th data-field="authors" data-filter-control="input">Authors</th>
-                <th data-field="title" data-filter-control="input">Title</th>
-                <th data-field="publisher" data-filter-control="input">Publisher</th>
-                <th data-field="journal" data-filter-control="input">Journal</th>
-                <th data-field="year" data-filter-control="input">Year</th>
-                <!--                    <th data-field="classes" data-filter-control="input" data-formatter="classesFormatter">Classes (from the text)</th>-->
-            </tr>
-            </thead>
-
-        </table>
-
-
-        {#            {% for document in documents %}#}
-        {#                <li>[<a href="/document/{{ document.hash }}">View</a>] [<a href="/pdf/{{ document.hash }}">PDF</a>] [<a#}
-        {#                        href="/annotation/{{ document.hash }}">Annotations</a>]</li>#}
-        {#            {% endfor %}#}
-        {#        #}
-        <div id="divRestI">
-            <a href={{ url_for('supercon.index') }}>Back</a>
-        </div>
-    </div>
-
-    <footer>
-        <p><span style="color:#848484;">contributors - 2021</span></p>
-    </footer>
-</div>
+    <v-app id="app">
+        <v-container fluid>
+            <h2>Supercon2 "automatically extracted database" tabular view</h2>
+            <v-select v-model="selectedHeaders" :items="headers" label="Select Columns" multiple outlined return-object>
+            </v-select>
+            <!-- TODO: height 800px should be dynamic? up to a user screen size?  -->
+            <v-data-table :headers="showHeaders" :items="items" :items-per-page="10" :dense="true"
+                loading-text="loading ..." :multi-sort="true" class="elevation-1" height="800">
+                <!-- <template v-slot:body.prepend>
+          <tr>
+            <td>
+              <v-text-field v-model="name" type="text" label="Dessert name"></v-text-field>
+            </td>
+            <td>
+              <v-text-field v-model="calories" type="number" label="Less than"></v-text-field>
+            </td>
+            <td>
+              <v-text-field v-model="fat" type="number" label="Less than"></v-text-field>
+            </td>
+            <td>
+              <v-text-field v-model="carbs" type="number" label="Exact number"></v-text-field>
+            </td>
+          </tr>
+        </template> -->
+                <template v-slot:item.actions="{ item }">
+                    <a :href="'../pdf/' + item.hash" target="_blank" :style="{'text-decoration': 'none'}">
+                        <v-icon class="mr-2" title="pdf">
+                            mdi-file-pdf-box
+                        </v-icon>
+                    </a>
+                    <a :href="'../annotation/' + item.hash" target="_blank" :style="{'text-decoration': 'none'}">
+                        <v-icon class="mr-2" title="annotation">
+                            mdi-tag-multiple
+                        </v-icon>
+                    </a>
+                    <a :href="'../document/' + item.hash" target="_blank" :style="{'text-decoration': 'none'}">
+                        <v-icon class="mr-2" title="document">
+                            mdi-file-document
+                        </v-icon>
+                    </a>
+                </template>
+            </v-data-table>
+            <p><span style="color:#848484;">contributors - 2021</span></p>
+        </v-container>
+    </v-app>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+        new Vue({
+            el: '#app',
+            vuetify: new Vuetify(),
+            data() {
+                return {
+                    selectedHeaders: [],
+                    headers: [
+                        { text: 'Raw Material', value: 'rawMaterial', hidden: false },
+                        { text: 'Name', value: 'name', hidden: false },
+                        { text: 'Formula', value: 'formula', hidden: false },
+                        { text: 'Space Group', value: 'spaceGroup', hidden: true },
+                        // { text: 'Space Group ID', value: 'spaceGroupId', hidden: true },
+                        { text: 'Crystal Structure', value: 'crystalStructure', hidden: true },
+                        // { text: 'Crystal Structure ID', value: 'crystalStructureId', hidden: true },
+                        { text: 'Unit Cell Type', value: 'unitCellType', hidden: true },
+                        // { text: 'Unit Cell Type ID', value: 'unitCellTypeId', hidden: true },
+                        { text: 'Doping', value: 'doping', hidden: false },
+                        { text: 'Shape', value: 'shape', hidden: false },
+                        { text: 'Variables', value: 'variables', hidden: true },
+                        { text: 'Material Class', value: 'materialClass', hidden: false },
+                        { text: 'Fabrication', value: 'fabrication', hidden: true },
+                        { text: 'Substrate', value: 'substrate', hidden: true },
+                        { text: 'Critical Temperature', value: 'criticalTemperature', hidden: false },
+                        // { text: 'Critical TemperatureId', value: 'criticalTemperatureId', hidden: true },
+                        { text: 'Applied Pressure', value: 'appliedPressure', hidden: false },
+                        // { text: 'Applied Pressure ID', value: 'appliedPressureId', hidden: true },
+                        { text: 'Critical Temperature Measurement Method', value: 'criticalTemperatureMeasurementMethod', hidden: true },
+                        // { text: 'Critical Temperature Measurement MethodId', value: 'criticalTemperatureMeasurementMethodId', hidden: true },
+                        { text: 'Link Type', value: 'linkType', hidden: true },
+                        { text: 'Section', value: 'section', hidden: false },
+                        { text: 'Subsection', value: 'subsection', hidden: false },
+                        { text: 'Path', value: 'path', hidden: true },
+                        { text: 'Filename', value: 'filename', hidden: true },
+                        { text: 'Hash', value: 'hash', hidden: true },
+                        { text: 'Timestamp', value: 'timestamp', hidden: true },
+                        { text: 'DOI', value: 'doi', hidden: false },
+                        { text: 'Authors', value: 'authors', width: 300, hidden: false },
+                        { text: 'Title', value: 'title', width: 500, hidden: false },
+                        { text: 'Publisher', value: 'publisher', hidden: false },
+                        { text: 'Journal', value: 'journal', hidden: false },
+                        { text: 'Year', value: 'year', hidden: false },
+                        { text: 'Type', value: 'type', hidden: false },
+                        { text: 'Actions', value: 'actions', sortable: false, hidden: false },
+                        // { text: 'Doc URL', value: 'doc_url', hidden: true },
+                        // { text: 'ID', value: 'id', hidden: true },
+                        // { text: 'Material ID', value: 'materialId', hidden: true },
+                        // { text: 'Sentence', value: 'sentence', width: 500, hidden: true },
+                        // { text: 'Status', value: 'status', hidden: true },
+                    ],
+                    items: []
+                }
+            },
+            computed: {
+                showHeaders() {
+                    return this.headers.filter(s => this.selectedHeaders.includes(s));
+                }
+            },
+            mounted() {
+                console.log("mounted")
+                axios.get("/records/automatic").then((data) => {
+                    this.items = data.data
+                })
+            },
+            methods: {
+            },
+            created() {
+                console.log("created")
+                this.selectedHeaders = this.headers.filter(h => !h.hidden)
+            },
+        })
+    </script>
 
 </body>
+
 </html>
