--- a/supercon2/templates/automatic_database.html
+++ b/supercon2/templates/automatic_database.html
@@ -120,7 +120,7 @@
                 }
             },
             mounted() {
-                axios.get('{{ url_for('supercon.get_tabular_from_path_by_type', type = 'automatic') }}').then((data) => {
+                axios.get('{{ url_for("supercon.get_tabular_from_path_by_type", type = "automatic") }}').then((data) => {
                     this.items = data.data
                 })
             },
